# aibot

./: docker-compose.backup.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend-fastapi/: .env.example  Dockerfile  Dockerfile.prod  README.md  main.py  package.json  pyproject.toml  run.py
apps/backend-fastapi/interceptors/: __init__.py  response.py
apps/backend-fastapi/models/: label.py  response.py
apps/backend-fastapi/routers/: label.py  ner.py
apps/backend-fastapi/services/: __init__.py  label.py
apps/backend-fastapi/src/: main.py  run.py
apps/backend-fastapi/src/app/: main.py
apps/backend-fastapi/src/app/ner/routers/: router.py
apps/backend-fastapi/src/app/ner/schemas/: __init__.py  label.py
apps/backend-fastapi/src/app/ner/services/: gliner.py
apps/backend-fastapi/src/core/: __init__.py  error_handlers.py  exceptions.py  settings.py
apps/backend-fastapi/src/interceptors/: response.py
apps/backend-fastapi/src/models/: __init__.py  response.py
apps/backend-fastapi/src/routers/: __init__.py  label.py  ner.py
apps/backend-fastapi/src/schemas/: entity.py
apps/backend-fastapi/src/services/: __init__.py  gliner.py  label.py
apps/backend-nest/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  package.json
apps/backend-nest/src/: main.ts
apps/frontend-vite/: Dockerfile  Dockerfile.prod  package.json  vite.config.ts
nginx/: default.conf  default.prod.conf
